--- a/index.mdx
+++ b/index.mdx
@@ -93,6 +93,14 @@ DirectoryEasy is a powerful platform that helps you create, manage, and monetize
   </Card>
 
   <Card
+    title="Blog and Advertising"
+    icon="newspaper"
+    href="/pages/blog-and-ads"
+  >
+    Create content and manage advertising placements for additional revenue.
+  </Card>
+
+  <Card
     title="Coming Soon"
     icon="sparkles"
     href="/pages/coming-soon"
