--- a/index.mdx
+++ b/index.mdx
@@ -101,6 +101,14 @@ DirectoryEasy is a powerful platform that helps you create, manage, and monetize
   </Card>
 
   <Card
+    title="Integrations"
+    icon="plug"
+    href="/pages/integrations"
+  >
+    Connect AI services, webhooks, Google Sheets, and media storage.
+  </Card>
+
+  <Card
     title="Coming Soon"
     icon="sparkles"
     href="/pages/coming-soon"
