--- a/index.mdx
+++ b/index.mdx
@@ -49,9 +49,9 @@ DirectoryEasy is a powerful platform that helps you create, manage, and monetize
   </Card>
 
   <Card
-    title="Adding Listings"
+    title="Adding Listings & Custom fields"
     icon="plus-circle"
-    href="/pages/adding-listings"
+    href="/pages/adding-listings-and-custom-fields"
   >
     Learn how users can submit listings to your directory.
   </Card>
