--- a/pages/design-customization.mdx
+++ b/pages/design-customization.mdx
@@ -309,7 +309,7 @@ Control decorative elements that appear behind your content:
     Set up your directory structure and basic settings
   </Card>
   
-  <Card title="Adding Listings" icon="plus-circle" href="/pages/adding-listings">
+  <Card title="Adding Listings" icon="plus-circle" href="/pages/adding-listings-and-custom-fields">
     Learn how to add content to your customized directory
   </Card>
 </CardGroup>
