--- a/pages/members-dashboard.mdx
+++ b/pages/members-dashboard.mdx
@@ -706,7 +706,7 @@ Members should download any important data before deleting their accounts.
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Adding Listings" icon="plus-circle" href="/pages/adding-listings">
+  <Card title="Adding Listings" icon="plus-circle" href="/pages/adding-listings-and-custom-fields">
     Learn more about listing submission controls and custom fields
   </Card>
   
