--- a/pages/managing-listings.mdx
+++ b/pages/managing-listings.mdx
@@ -711,7 +711,7 @@ Bulk operations are essential when managing large directories with hundreds or t
     Understand the member experience and features
   </Card>
   
-  <Card title="Adding Listings" icon="plus-circle" href="/pages/adding-listings">
+  <Card title="Adding Listings" icon="plus-circle" href="/pages/adding-listings-and-custom-fields">
     Learn about submission controls and custom fields
   </Card>
 </CardGroup>
