--- a/pages/tags-and-monetization.mdx
+++ b/pages/tags-and-monetization.mdx
@@ -10,7 +10,7 @@ DirectoryEasy provides powerful tools for organizing your listings with tags and
 <iframe
   width="100%"
   height="400"
-  src="https://www.youtube.com/embed/VIDEO_ID_HERE"
+  src="https://youtu.be/CtQQVem6nEc"
   title="Tags and Monetization"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
