--- a/pages/tags-and-monetization.mdx
+++ b/pages/tags-and-monetization.mdx
@@ -658,10 +658,9 @@ Build a pricing structure that drives revenue while providing clear value.
     **Professional** - Full access ($99/mo)
     - Instant publishing
     - Featured for 30 days
+    - Ads placement for 30 days
     - Do-follow links
     - Priority support
-    - Premium badge
-    - Analytics dashboard
   </Tab>
   
   <Tab title="Freemium Model">
